--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <!-- 加入新的尺寸資源設定 -->
     <dimen name="default_padding">6dp</dimen>
     <dimen name="title_txt_size">24sp</dimen>
+    <!-- 加入邊界尺寸資源設定 -->
+    <dimen name="default_margin">2dp</dimen>
 </resources>
