--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,5 +26,7 @@
         android:background="@drawable/rectangle_drawable"
         android:gravity="center"
         android:padding="@dimen/default_padding"
-        android:text="@string/app_name" />
+        android:text="@string/app_name"
+        android:clickable="true"
+        android:onClick="aboutApp" />
 </LinearLayout>
