--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,27 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
 
+    <!-- 為選單項目加入「android:onClick」設定 -->
     <item
         android:id="@+id/search_item"
         android:icon="@android:drawable/ic_menu_search"
         android:title="SEARCH"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:onClick="clickMenuItem" />
 
     <item
         android:id="@+id/add_item"
         android:icon="@android:drawable/ic_menu_add"
         android:title="ADD"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:onClick="clickMenuItem" />
 
     <item
         android:id="@+id/revert_item"
         android:icon="@android:drawable/ic_menu_revert"
         android:title="REVERT"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:onClick="clickMenuItem" />
 
     <item
         android:id="@+id/delete_item"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="DELETE"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        android:onClick="clickMenuItem" />
 </menu>
