顏色選擇，尚有問題

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -31,4 +31,11 @@
         android:title="DELETE"
         app:showAsAction="always"
         android:onClick="clickMenuItem" />
+
+    <!-- 設定 -->
+    <item
+        android:title="Setting"
+        app:showAsAction="always"
+        android:icon="@android:drawable/ic_menu_preferences"
+        android:onClick="clickPreferences" />
 </menu>
