--- a/app/src/main/res/xml/mypreference.xml
+++ b/app/src/main/res/xml/mypreference.xml
@@ -10,9 +10,9 @@
         android:summary="@string/default_color_summary">
         <!-- 啟動選擇顏色元件 -->
         <intent
-            android:action="net.macdidi.myandroidtutorial.CHOOSE_COLOR"
-            android:targetPackage="net.macdidi.myandroidtutorial"
-            android:targetClass="net.macdidi.myandroidtutorial.ColorActivity"/>
+            android:action="com.greed.ging.note.CHOOSE_COLOR"
+            android:targetPackage="com.greed.ging.note"
+            android:targetClass="com.greed.ging.note.ColorActivity"/>
     </Preference>
 
     <!-- 預設提醒時間 -->
